src/objects/Integration_Entity__mdt.object
<CustomObject>
    <fields>
        <fullName>Integration_Id_API_Name__c</fullName>
        <label>Integration Id API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Flag_API_Name__c</fullName>
        <label>Sync Flag API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>Ticket #12826 :  Object API name for different objects</description>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Response_API_Name__c</fullName>
        <description>Ticket #12826 :  Accounting response field API name for different objects</description>
        <inlineHelpText>Accounting response field API name for different objects</inlineHelpText>
        <label>Accounting Response API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Entity</label>
    <pluralLabel>Integration Entities</pluralLabel>
</CustomObject>